精简 Trinity 计划对象校验